src/main/java/com/example/sqlvericek/Error/WrongDates/WrongDatesError.java
package com.example.sqlvericek.Error.WrongDates;

import com.example.sqlvericek.Error.ErrorsTypeModel.ErrorsType;

public class WrongDatesError {
    private ErrorsType errors;

    public ErrorsType getErrors() {
        return errors;
    }

    public void setErrors(ErrorsType value) {
        this.errors = value;
    }
}
